# surge2littlesnitch

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp  rule_holder.cpp  rule_holder.hpp
cidr2range/: CMakeLists.txt  cidr2range.cpp  cidr2range.hpp  test.cpp
